# Hushh.ai

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Backend/: BACKEND_API.md  app.js  package-lock.json  package.json
Backend/prisma/: schema.prisma  seed.js
Backend/prisma/migrations/20260301180614_initial_migration/: migration.sql
Backend/src/middleware/: auth.js
Backend/src/routes/: auth.js  catalog.js  leaderboard.js  materials.js  quizzes.js  threads.js
Backend/src/utils/: formatBytes.js  timeAgo.js
UI/: package-lock.json  vite.config.js
UI/src/: App.jsx  api.js
UI/src/components/home/: HomeTab.jsx
UI/src/components/layout/: Navbar.jsx
UI/src/components/materials/: MaterialsTab.jsx
UI/src/components/quiz/: QuizTab.jsx
UI/src/data/: mockData.js
api/: app.py
api/routes/: chat.py  ingest.py  materials.py
cli/: main.py
config/: settings.py
core/: agent.py  embedder.py  knowledge_base.py  local_agent.py  vector_store.py
quiz/: agent.py  engine.py  models.py  router.py
